--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "lerna": "2.0.0",
-  "packages": ["packages/*"],
-  "version": "0.0.0",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "1.0.0",
   "npmClient": "yarn"
 }
