--- a/packages/evergreen-text-input/package.json
+++ b/packages/evergreen-text-input/package.json
@@ -14,12 +14,12 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "evergreen-typography": "^1.0.0",
     "evergreen-colors": "^1.0.0",
+    "evergreen-typography": "^1.0.0",
     "ui-box": "^0.3.5"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "prop-types": "^15.0.0"
+    "prop-types": "^15.0.0",
+    "react": "^0.14.0 || ^15.0.0"
   }
 }
