--- a/packages/evergreen-buttons/package.json
+++ b/packages/evergreen-buttons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-buttons",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "React components: Button",
   "main": "lib/index.js",
   "keywords": [
@@ -18,8 +18,8 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "dependencies": {
-    "evergreen-colors": "^1.0.0",
-    "evergreen-typography": "^1.0.0",
+    "evergreen-colors": "^1.0.1-alpha.0",
+    "evergreen-typography": "^1.0.1-alpha.0",
     "ui-box": "^0.3.5"
   }
 }
