--- a/packages/evergreen-colors/package.json
+++ b/packages/evergreen-colors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-colors",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Colors",
   "main": "src/colors.json",
   "keywords": [
