--- a/packages/evergreen-layers/package.json
+++ b/packages/evergreen-layers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-layers",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "React components: Pane, Card, ElevationStyles, BorderColors, LayerAppearances",
   "main": "lib/index.js",
   "keywords": [
@@ -21,7 +21,7 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "dependencies": {
-    "evergreen-colors": "^1.0.0",
+    "evergreen-colors": "^1.0.1-alpha.0",
     "ui-box": "^0.3.5"
   }
 }
