--- a/packages/evergreen-icons/package.json
+++ b/packages/evergreen-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-icons",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.1",
   "description": "React components: TriangleIcon, CloseIcon, CogIcon, ArrowIcon, SearchIcon, CheckCircleIcon, Icon",
   "main": "lib/index.js",
   "keywords": [
@@ -22,7 +22,7 @@
     "ui-box": "^0.3.5"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "prop-types": "^15.0.0"
+    "prop-types": "^15.0.0",
+    "react": "^0.14.0 || ^15.0.0"
   }
 }
