--- a/packages/evergreen-select/package.json
+++ b/packages/evergreen-select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-select",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.3",
   "description": "React components: Select",
   "main": "lib/index.js",
   "keywords": [
