--- a/packages/evergreen-buttons/package.json
+++ b/packages/evergreen-buttons/package.json
@@ -15,11 +15,11 @@
   "license": "MIT",
   "peerDependencies": {
     "prop-types": "^15.0.0",
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^16.0.0"
   },
   "dependencies": {
     "evergreen-colors": "^1.0.1-alpha.2",
     "evergreen-typography": "^1.0.1-alpha.2",
-    "ui-box": "^0.3.5"
+    "ui-box": "^0.4.0"
   }
 }
