--- a/packages/evergreen-icons/package.json
+++ b/packages/evergreen-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-icons",
-  "version": "1.0.1-alpha.2",
+  "version": "2.0.0-0",
   "description": "React components: TriangleIcon, CloseIcon, CogIcon, ArrowIcon, SearchIcon, CheckCircleIcon, Icon",
   "main": "lib/index.js",
   "keywords": [
