--- a/packages/evergreen-portal/package.json
+++ b/packages/evergreen-portal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-portal",
-  "version": "1.0.0",
+  "version": "2.0.0-0",
   "description": "React components: Portal",
   "main": "lib/index.js",
   "keywords": [
@@ -12,7 +12,6 @@
   ],
   "author": "Segment",
   "license": "MIT",
-  "dependencies": {},
   "peerDependencies": {
     "prop-types": "^15.0.0",
     "react": "^16.0.0",
