--- a/packages/evergreen-buttons/package.json
+++ b/packages/evergreen-buttons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-buttons",
-  "version": "2.0.0-0",
+  "version": "2.0.0",
   "description": "React components: Button",
   "main": "lib/index.js",
   "keywords": [
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "evergreen-colors": "^2.0.0-0",
-    "evergreen-typography": "^2.0.0-0",
+    "evergreen-typography": "^2.0.0",
     "ui-box": "^0.4.0"
   }
 }
