--- a/packages/evergreen-select/package.json
+++ b/packages/evergreen-select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-select",
-  "version": "2.0.0-0",
+  "version": "2.0.0",
   "description": "React components: Select",
   "main": "lib/index.js",
   "keywords": [
@@ -15,7 +15,7 @@
   "dependencies": {
     "evergreen-colors": "^2.0.0-0",
     "evergreen-icons": "^2.0.0-0",
-    "evergreen-typography": "^2.0.0-0",
+    "evergreen-typography": "^2.0.0",
     "ui-box": "^0.4.0"
   },
   "peerDependencies": {
