--- a/packages/evergreen-text-input/package.json
+++ b/packages/evergreen-text-input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-text-input",
-  "version": "2.0.0-0",
+  "version": "2.0.0",
   "description": "React components: TextInput, TextInputAppearances",
   "main": "lib/index.js",
   "keywords": [
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "evergreen-colors": "^2.0.0-0",
-    "evergreen-typography": "^2.0.0-0",
+    "evergreen-typography": "^2.0.0",
     "ui-box": "^0.4.0"
   },
   "peerDependencies": {
