--- a/packages/evergreen-typography/package.json
+++ b/packages/evergreen-typography/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-typography",
-  "version": "2.0.0-0",
+  "version": "2.0.0",
   "description": "React components: Text, Paragraph, Heading, Code, Pre, Label, Small, Strong",
   "main": "lib/index.js",
   "keywords": [
