--- a/packages/evergreen-text-input/package.json
+++ b/packages/evergreen-text-input/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "evergreen-colors": "^2.0.0-0",
     "evergreen-typography": "^2.0.0",
+    "evergreen-shared-styles": "^2.0.0",
     "ui-box": "^0.4.0"
   },
   "peerDependencies": {
