--- a/packages/evergreen-shared-styles/package.json
+++ b/packages/evergreen-shared-styles/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "evergreen-colors": "^2.0.0-0",
-    "evergreen-typography": "^2.0.0"
+    "evergreen-typography": "^2.0.0",
+    "ui-box": "^0.4.1"
   }
 }
