--- a/packages/evergreen-layers/package.json
+++ b/packages/evergreen-layers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-layers",
-  "version": "2.0.0-0",
+  "version": "2.2.6",
   "description": "React components: Pane, Card, ElevationStyles, BorderColors, LayerAppearances",
   "main": "lib/index.js",
   "keywords": [
@@ -21,7 +21,7 @@
     "react": "^16.0.0"
   },
   "dependencies": {
-    "evergreen-colors": "^2.0.0-0",
+    "evergreen-colors": "^2.2.6",
     "ui-box": "^0.4.1"
   }
 }
