--- a/packages/evergreen-popover/package.json
+++ b/packages/evergreen-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-popover",
-  "version": "2.2.4",
+  "version": "2.2.6",
   "description": "React components: Popover",
   "main": "lib/index.js",
   "keywords": [
@@ -13,8 +13,8 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "evergreen-layers": "^2.0.0-0",
-    "evergreen-portal": "^2.2.3",
+    "evergreen-layers": "^2.2.6",
+    "evergreen-portal": "^2.2.6",
     "object-values": "^1.0.0",
     "react-transition-group": "^2.2.1",
     "ui-box": "^0.4.1"
@@ -24,7 +24,7 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "evergreen-buttons": "^2.2.4",
-    "evergreen-typography": "^2.0.0"
+    "evergreen-buttons": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
