--- a/packages/evergreen-shared-styles/package.json
+++ b/packages/evergreen-shared-styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-shared-styles",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "description": "JS package: evergreen-shared-styles",
   "main": "lib/index.js",
   "keywords": [
@@ -12,8 +12,8 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "evergreen-colors": "^2.0.0-0",
-    "evergreen-typography": "^2.0.0",
+    "evergreen-colors": "^2.2.6",
+    "evergreen-typography": "^2.2.6",
     "ui-box": "^0.4.1"
   }
 }
