--- a/packages/evergreen-text-input/package.json
+++ b/packages/evergreen-text-input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-text-input",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "description": "React components: TextInput, TextInputAppearances",
   "main": "lib/index.js",
   "keywords": [
@@ -14,9 +14,9 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "evergreen-colors": "^2.0.0-0",
-    "evergreen-shared-styles": "^2.2.5",
-    "evergreen-typography": "^2.0.0",
+    "evergreen-colors": "^2.2.6",
+    "evergreen-shared-styles": "^2.2.6",
+    "evergreen-typography": "^2.2.6",
     "ui-box": "^0.4.1"
   },
   "peerDependencies": {
