--- a/packages/evergreen-buttons/package.json
+++ b/packages/evergreen-buttons/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "evergreen-colors": "^2.2.6",
+    "evergreen-shared-styles": "^2.2.6",
     "evergreen-typography": "^2.2.6",
     "ui-box": "^0.4.1"
   }
