--- a/packages/evergreen-popover/package.json
+++ b/packages/evergreen-popover/package.json
@@ -3,25 +3,17 @@
   "version": "2.4.0",
   "description": "React components: Popover",
   "main": "lib/index.js",
-  "keywords": [
-    "evergreen",
-    "segment",
-    "ui",
-    "react",
-    "Popover"
-  ],
+  "keywords": ["evergreen", "segment", "ui", "react", "Popover"],
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
     "evergreen-layers": "^2.2.6",
-    "evergreen-portal": "^2.2.6",
-    "object-values": "^1.0.0",
-    "react-transition-group": "^2.2.1",
+    "evergreen-positioner": "^2.2.6",
+    "prop-types": "^15.0.0",
     "ui-box": "^0.4.1"
   },
   "peerDependencies": {
-    "prop-types": "^15.0.0",
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^16.0.0"
   },
   "devDependencies": {
     "evergreen-buttons": "^2.4.0",
