--- a/packages/evergreen-popover/package.json
+++ b/packages/evergreen-popover/package.json
@@ -1,9 +1,15 @@
 {
   "name": "evergreen-popover",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "React components: Popover",
   "main": "lib/index.js",
-  "keywords": ["evergreen", "segment", "ui", "react", "Popover"],
+  "keywords": [
+    "evergreen",
+    "segment",
+    "ui",
+    "react",
+    "Popover"
+  ],
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
