--- a/packages/evergreen-image/package.json
+++ b/packages/evergreen-image/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evergreen-image",
-  "version": "1.0.0",
+  "version": "2.6.0",
   "description": "React components: Image",
   "main": "lib/index.js",
   "keywords": [
@@ -13,8 +13,8 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "ui-box": "^0.4.0",
-    "prop-types": "^15.0.0"
+    "prop-types": "^15.0.0",
+    "ui-box": "^0.4.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
