--- a/packages/evergreen-badges/package.json
+++ b/packages/evergreen-badges/package.json
@@ -3,20 +3,13 @@
   "version": "2.4.0",
   "description": "React Style Components: Pill, Badge",
   "main": "lib/index.js",
-  "keywords": [
-    "evergreen",
-    "segment",
-    "ui",
-    "react",
-    "Pill",
-    "Badge"
-  ],
+  "keywords": ["evergreen", "segment", "ui", "react", "Pill", "Badge"],
   "license": "MIT",
   "peerDependencies": {
     "prop-types": "^15.0.0",
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^16.0.0"
   },
   "dependencies": {
-    "evergreen-colors": "^2.0.0"
+    "evergreen-color-utils": "^2.6.0"
   }
 }
