--- a/packages/evergreen-spinner/package.json
+++ b/packages/evergreen-spinner/package.json
@@ -1,15 +1,21 @@
 {
   "name": "evergreen-spinner",
-  "version": "1.0.0",
+  "version": "2.8.0",
   "description": "React components: Spinner",
   "main": "lib/index.js",
-  "keywords": ["evergreen", "segment", "ui", "react", "Spinner"],
+  "keywords": [
+    "evergreen",
+    "segment",
+    "ui",
+    "react",
+    "Spinner"
+  ],
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "ui-box": "^0.4.0",
+    "evergreen-colors": "^2.0.0",
     "prop-types": "^15.0.0",
-    "evergreen-colors": "^2.0.0"
+    "ui-box": "^0.4.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
