--- a/packages/evergreen-spinner/package.json
+++ b/packages/evergreen-spinner/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "evergreen-colors": "^2.0.0",
     "prop-types": "^15.0.0",
-    "ui-box": "^0.4.0"
+    "ui-box": "^0.5.4"
   },
   "peerDependencies": {
     "react": "^16.0.0"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
