--- a/packages/evergreen-checkbox/package.json
+++ b/packages/evergreen-checkbox/package.json
@@ -15,10 +15,14 @@
   "dependencies": {
     "evergreen-colors": "^2.0.0",
     "evergreen-shared-styles": "^2.8.0",
-    "ui-box": "^0.4.0"
+    "ui-box": "^0.5.4"
   },
   "peerDependencies": {
     "prop-types": "^15.0.0",
     "react": "^16.0.0"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
