--- a/packages/evergreen-color-utils/package.json
+++ b/packages/evergreen-color-utils/package.json
@@ -12,9 +12,11 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "evergreen-colors": "^2.2.6"
+    "evergreen-colors": "^2.2.6",
+    "ui-box": "^0.5.4"
   },
   "devDependencies": {
+    "evergreen-layers": "^2.2.6",
     "evergreen-typography": "^2.2.6"
   }
 }
