--- a/packages/evergreen-icons/package.json
+++ b/packages/evergreen-icons/package.json
@@ -19,10 +19,15 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "ui-box": "^0.4.1"
+    "evergreen-colors": "^2.0.0",
+    "ui-box": "^0.5.4"
   },
   "peerDependencies": {
     "prop-types": "^15.0.0",
     "react": "^16.0.0"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
