--- a/packages/evergreen-image/package.json
+++ b/packages/evergreen-image/package.json
@@ -14,9 +14,13 @@
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.0.0",
-    "ui-box": "^0.4.0"
+    "ui-box": "^0.5.4"
   },
   "peerDependencies": {
     "react": "^16.0.0"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
