--- a/packages/evergreen-layers/package.json
+++ b/packages/evergreen-layers/package.json
@@ -22,6 +22,10 @@
   },
   "dependencies": {
     "evergreen-colors": "^2.2.6",
-    "ui-box": "^0.4.1"
+    "ui-box": "^0.5.4"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
