--- a/packages/evergreen-portal/package.json
+++ b/packages/evergreen-portal/package.json
@@ -19,6 +19,10 @@
   },
   "dependencies": {
     "dom-helpers": "^3.2.1",
-    "ui-box": "^0.4.1"
+    "ui-box": "^0.5.4"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
