--- a/packages/evergreen-positioner/package.json
+++ b/packages/evergreen-positioner/package.json
@@ -17,9 +17,13 @@
     "object-values": "^1.0.0",
     "prop-types": "^15.0.0",
     "react-transition-group": "^2.2.1",
-    "ui-box": "^0.4.0"
+    "ui-box": "^0.5.4"
   },
   "peerDependencies": {
     "react": "^16.0.0"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
