--- a/packages/evergreen-search-input/package.json
+++ b/packages/evergreen-search-input/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "evergreen-popover",
-  "version": "2.8.0",
-  "description": "React components: Popover",
+  "name": "evergreen-search-input",
+  "version": "1.0.0",
+  "description": "React components: SearchInput",
   "main": "lib/index.js",
   "keywords": [
     "evergreen",
     "segment",
     "ui",
     "react",
-    "Popover"
+    "SearchInput"
   ],
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "evergreen-layers": "^2.2.6",
-    "evergreen-positioner": "^2.2.6",
+    "evergreen-text-input": "^2.0.0",
     "prop-types": "^15.0.0",
     "ui-box": "^0.5.4"
   },
@@ -22,7 +21,7 @@
     "react": "^16.0.0"
   },
   "devDependencies": {
-    "evergreen-buttons": "^2.8.0",
+    "evergreen-layers": "^2.2.6",
     "evergreen-typography": "^2.2.6"
   }
 }
