--- a/packages/evergreen-shared-styles/package.json
+++ b/packages/evergreen-shared-styles/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "evergreen-colors": "^2.2.6",
     "evergreen-typography": "^2.2.6",
-    "ui-box": "^0.4.1"
+    "ui-box": "^0.5.4"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6"
   }
 }
