--- a/packages/evergreen-textarea/package.json
+++ b/packages/evergreen-textarea/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "evergreen-shared-styles": "^2.8.0",
     "evergreen-typography": "^2.2.6",
-    "ui-box": "^0.4.1"
+    "prop-types": "^15.0.0",
+    "ui-box": "^0.5.4"
   },
   "peerDependencies": {
-    "prop-types": "^15.0.0",
     "react": "^16.0.0"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6"
   }
 }
