--- a/packages/evergreen-tooltip/package.json
+++ b/packages/evergreen-tooltip/package.json
@@ -18,9 +18,12 @@
     "evergreen-positioner": "^2.5.0",
     "evergreen-typography": "^2.2.6",
     "prop-types": "^15.0.0",
-    "ui-box": "^0.4.0"
+    "ui-box": "^0.5.4"
   },
   "peerDependencies": {
     "react": "^16.0.0"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6"
   }
 }
