--- a/packages/evergreen-typography/package.json
+++ b/packages/evergreen-typography/package.json
@@ -20,11 +20,15 @@
   "author": "Segment",
   "license": "MIT",
   "peerDependencies": {
-    "prop-types": "^15.0.0",
     "react": "^16.0.0"
   },
   "dependencies": {
     "evergreen-colors": "^2.2.6",
-    "ui-box": "^0.4.1"
+    "prop-types": "^15.0.0",
+    "ui-box": "^0.5.4"
+  },
+  "devDependencies": {
+    "evergreen-layers": "^2.2.6",
+    "evergreen-typography": "^2.2.6"
   }
 }
