--- a/packages/evergreen-layers/package.json
+++ b/packages/evergreen-layers/package.json
@@ -1,7 +1,8 @@
 {
   "name": "evergreen-layers",
   "version": "2.9.0",
-  "description": "React components: Pane, Card, ElevationStyles, BorderColors, LayerAppearances",
+  "description":
+    "React components: Pane, Card, ElevationStyles, BorderColors, LayerAppearances",
   "main": "lib/index.js",
   "keywords": [
     "evergreen",
@@ -25,7 +26,6 @@
     "ui-box": "^0.5.4"
   },
   "devDependencies": {
-    "evergreen-layers": "^2.9.0",
     "evergreen-typography": "^2.9.0"
   }
 }
