--- a/packages/evergreen-typography/package.json
+++ b/packages/evergreen-typography/package.json
@@ -1,7 +1,8 @@
 {
   "name": "evergreen-typography",
   "version": "2.9.0",
-  "description": "React components: Text, Paragraph, Heading, Code, Pre, Label, Small, Strong",
+  "description":
+    "React components: Text, Paragraph, Heading, Code, Pre, Label, Small, Strong",
   "main": "lib/index.js",
   "keywords": [
     "evergreen",
@@ -28,7 +29,6 @@
     "ui-box": "^0.5.4"
   },
   "devDependencies": {
-    "evergreen-layers": "^2.9.0",
-    "evergreen-typography": "^2.9.0"
+    "evergreen-layers": "^2.9.0"
   }
 }
