--- a/packages/evergreen-table/package.json
+++ b/packages/evergreen-table/package.json
@@ -1,8 +1,7 @@
 {
   "name": "evergreen-table",
-  "version": "1.0.0",
-  "description":
-    "React components: TableCell, TextTableCell, TableRow, TableHeaderCell, TextTableHeaderCell, SearchTableHeaderCell, TableBody",
+  "version": "2.10.0",
+  "description": "React components: TableCell, TextTableCell, TableRow, TableHeaderCell, TextTableHeaderCell, SearchTableHeaderCell, TableBody",
   "main": "lib/index.js",
   "keywords": [
     "evergreen",
@@ -20,13 +19,13 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "ui-box": "^0.5.3",
+    "evergreen-colors": "^2.10.0",
+    "evergreen-icons": "^2.10.0",
+    "evergreen-layers": "^2.10.0",
+    "evergreen-shared-styles": "^2.10.0",
+    "evergreen-typography": "^2.10.0",
     "prop-types": "^15.0.0",
-    "evergreen-layers": "^2.0.0",
-    "evergreen-icons": "^2.0.0",
-    "evergreen-colors": "^2.0.0",
-    "evergreen-typography": "^2.0.0",
-    "evergreen-shared-styles": "^2.0.0"
+    "ui-box": "^0.5.3"
   },
   "peerDependencies": {
     "react": "^16.0.0"
