--- a/packages/evergreen-overlay/package.json
+++ b/packages/evergreen-overlay/package.json
@@ -1,20 +1,26 @@
 {
   "name": "evergreen-overlay",
-  "version": "2.0.0",
+  "version": "2.14.0",
   "description": "React components: Overlay",
   "main": "lib/index.js",
-  "keywords": ["evergreen", "segment", "ui", "react", "Overlay"],
+  "keywords": [
+    "evergreen",
+    "segment",
+    "ui",
+    "react",
+    "Overlay"
+  ],
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "evergreen-portal": "^2.13.0",
     "evergreen-colors": "^2.0.0",
+    "evergreen-portal": "^2.13.0",
     "prop-types": "^15.0.0",
     "react-transition-group": "^2.2.1",
     "ui-box": "^0.5.3"
   },
   "devDependencies": {
-    "evergreen-buttons": "^2.0.0"
+    "evergreen-buttons": "^2.14.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
