--- a/packages/evergreen-side-sheet/package.json
+++ b/packages/evergreen-side-sheet/package.json
@@ -1,20 +1,26 @@
 {
   "name": "evergreen-side-sheet",
-  "version": "1.0.0",
+  "version": "2.14.0",
   "description": "React components: SideSheet",
   "main": "lib/index.js",
-  "keywords": ["evergreen", "segment", "ui", "react", "SideSheet"],
+  "keywords": [
+    "evergreen",
+    "segment",
+    "ui",
+    "react",
+    "SideSheet"
+  ],
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "ui-box": "^0.5.3",
-    "evergreen-overlay": "^2.0.0",
-    "evergreen-layers": "^2.0.0",
     "evergreen-icons": "^2.0.0",
-    "prop-types": "^15.0.0"
+    "evergreen-layers": "^2.0.0",
+    "evergreen-overlay": "^2.14.0",
+    "prop-types": "^15.0.0",
+    "ui-box": "^0.5.3"
   },
   "devDependencies": {
-    "evergreen-buttons": "^2.0.0"
+    "evergreen-buttons": "^2.14.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
