--- a/packages/evergreen-badges/package.json
+++ b/packages/evergreen-badges/package.json
@@ -1,16 +1,23 @@
 {
   "name": "evergreen-badges",
-  "version": "2.13.0",
+  "version": "2.18.0",
   "description": "React Style Components: Pill, Badge",
   "main": "lib/index.js",
-  "keywords": ["evergreen", "segment", "ui", "react", "Pill", "Badge"],
+  "keywords": [
+    "evergreen",
+    "segment",
+    "ui",
+    "react",
+    "Pill",
+    "Badge"
+  ],
   "license": "MIT",
   "peerDependencies": {
     "prop-types": "^15.0.0",
     "react": "^16.0.0"
   },
   "dependencies": {
-    "evergreen-shared-styles": "^2.13.0",
+    "evergreen-shared-styles": "^2.18.0",
     "ui-box": "^0.5.4"
   },
   "devDependencies": {
