--- a/packages/evergreen-dialog/package.json
+++ b/packages/evergreen-dialog/package.json
@@ -1,14 +1,20 @@
 {
   "name": "evergreen-dialog",
-  "version": "2.17.0",
+  "version": "2.18.0",
   "description": "React components: Dialog",
   "main": "lib/index.js",
-  "keywords": ["evergreen", "segment", "ui", "react", "Dialog"],
+  "keywords": [
+    "evergreen",
+    "segment",
+    "ui",
+    "react",
+    "Dialog"
+  ],
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
-    "evergreen-buttons": "^2.0.0",
-    "evergreen-dialog": "^2.17.0",
+    "evergreen-buttons": "^2.18.0",
+    "evergreen-dialog": "^2.18.0",
     "evergreen-typography": "^2.0.0",
     "prop-types": "^15.0.0",
     "ui-box": "^0.5.3"
