--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lerna": "^2.0.0",
     "linklocal": "^2.8.1",
     "prettier": "^1.7.0",
+    "ui-box": "^0.5.4",
     "url-loader": "^0.5.9"
   },
   "scripts": {
@@ -34,18 +35,15 @@
     "create-package:components": "babel-node tools/create-package-components",
     "bootstrap": "lerna exec -- git clean -Xdf . && lerna bootstrap",
     "clean": "lerna exec -- git clean -Xdf . && rm -rf node_modules",
-    "lint":
-      "eslint --cache --ignore-pattern coverage --ignore-pattern node_modules --ignore-pattern lib .",
+    "lint": "eslint --cache --ignore-pattern coverage --ignore-pattern node_modules --ignore-pattern lib .",
     "storybook": "start-storybook -p 6006",
     "deploy-storybook": "storybook-to-ghpages",
-    "build:watch":
-      "lerna exec --parallel -- babel src -d lib --ignore *.test.js -w",
+    "build:watch": "lerna exec --parallel -- babel src -d lib --ignore *.test.js -w",
     "build": "lerna exec --parallel -- babel src -d lib --ignore *.test.js"
   },
   "dependencies": {
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "ui-box": "^0.5.4"
+    "react-dom": "^16.0.0"
   }
 }
