--- a/packages/evergreen-dialog/package.json
+++ b/packages/evergreen-dialog/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "evergreen-buttons": "^2.18.14",
     "evergreen-dialog": "^2.18.14",
+    "evergreen-overlay": "^2.18.14",
     "evergreen-typography": "^2.18.14",
     "prop-types": "^15.0.0",
     "ui-box": "^0.5.3"
