--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.3.0",
@@ -36,12 +36,10 @@
     "create-package:components": "babel-node tools/create-package-components",
     "bootstrap": "lerna exec -- git clean -Xdf . && lerna bootstrap",
     "clean": "lerna exec -- git clean -Xdf . && rm -rf node_modules",
-    "lint":
-      "eslint --cache --ignore-pattern coverage --ignore-pattern node_modules --ignore-pattern lib .",
+    "lint": "eslint --cache --ignore-pattern coverage --ignore-pattern node_modules --ignore-pattern lib .",
     "storybook": "start-storybook -p 6006",
     "deploy-storybook": "storybook-to-ghpages",
-    "build:watch":
-      "lerna exec --parallel -- babel src -d lib --ignore *.test.js -w",
+    "build:watch": "lerna exec --parallel -- babel src -d lib --ignore *.test.js -w",
     "build": "lerna exec --parallel -- babel src -d lib --ignore *.test.js",
     "docs:dev": "next docs",
     "docs:build": "next build docs"
