--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "gatsby": "^1.9.127",
-    "gatsby-link": "^1.6.30"
+    "gatsby-link": "^1.6.30",
+    "gatsby-plugin-react-helmet": "^2.0.2"
   }
 }
