--- a/packages/evergreen-radio/package.json
+++ b/packages/evergreen-radio/package.json
@@ -7,6 +7,7 @@
   "author": "Segment",
   "license": "MIT",
   "dependencies": {
+    "evergreen-layers": "^2.19.0",
     "evergreen-shared-styles": "^2.19.0",
     "evergreen-typography": "^2.19.0",
     "prop-types": "^15.0.0",
