--- a/packages/evergreen-select-menu/package.json
+++ b/packages/evergreen-select-menu/package.json
@@ -11,6 +11,7 @@
     "evergreen-layers": "^2.19.0",
     "evergreen-popover": "^2.19.0",
     "evergreen-table": "^2.19.0",
+    "evergreen-typography": "^2.19.0",
     "fuzzaldrin-plus": "^0.6.0",
     "prop-types": "^15.0.0",
     "react-tiny-virtual-list": "^2.1.4",
