Improve bootstrap and clean commands

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "concurrently \"npm run build:watch\" \"npm run storybook\"",
     "create-package": "babel-node tools/create-package",
     "create-package:components": "babel-node tools/create-package-components",
-    "bootstrap": "yarn clean && lerna bootstrap",
-    "clean": "git clean -Xdf packages",
+    "bootstrap": "yarn && lerna bootstrap && cd docs && yarn",
+    "clean": "git clean -Xdf",
     "lint": "xo",
     "storybook": "start-storybook -p 6006",
     "deploy-storybook": "storybook-to-ghpages",
