--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,75 @@
 version: 2
+
+defaults: &defaults
+  docker:
+    - image: circleci/node:latest
+
+workflows:
+  version: 2
+  main:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only: /.*/
+
+      - deploy_docs:
+          filters:
+            branches:
+              only: master
+          requires:
+            - build
+
+      - publish_package:
+          filters:
+            tags:
+              only: /[^@]+@[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
+          requires:
+            - build
+
 jobs:
   build:
-    docker:
-      - image: circleci/node:latest
+    <<: *defaults
     steps:
       - checkout
       - run:
-          name: Setup npm auth
+          name: Configure npm auth
           command: npm config set "//registry.npmjs.org/:_authToken" $NPM_AUTH
       - run:
           name: Install dependencies
-          command: |
-            yarn bootstrap
+          command: yarn bootstrap
+      - run:
+          name: Build
+          command: yarn build
       - run:
           name: Lint
           command: yarn lint
+      - persist_to_workspace:
+          root: /tmp/workspace
+          paths:
+            - .
+
+  deploy_docs:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: Deploy docs
+          command: yarn deploy-storybook
+
+  publish_package:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: Configure npm auth
+          command: npm config set "//registry.npmjs.org/:_authToken" $NPM_AUTH
+      - run:
+          name: Publish package
+          command: ./tools/publish-tag.js $CIRCLE_TAG
