--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ workflows:
               only: /.*/
             branches:
               only: /.*/
+              ignore: gh-pages
 
       - deploy_docs:
           filters:
