colors: fix main export

--- a/packages/evergreen-colors/package.json
+++ b/packages/evergreen-colors/package.json
@@ -2,7 +2,7 @@
   "name": "evergreen-colors",
   "version": "2.19.3",
   "description": "Colors",
-  "main": "src/colors.js",
+  "main": "lib/colors.js",
   "keywords": ["evergreen", "segment", "ui", "colors", "evergreen-colors"],
   "author": "Segment",
   "license": "MIT",
