--- a/circle.yml
+++ b/circle.yml
@@ -11,23 +11,23 @@ dependencies:
   pre:
     - npm config set "//registry.npmjs.org/:_authToken" $NPM_AUTH
   override:
-    - yarn bootstrap
+    - yarn run bootstrap
   cache_directories:
     - ~/.cache/yarn
 
 compile:
   override:
-    - yarn build
+    - yarn run build
 
 test:
   override:
-    - yarn lint
+    - yarn run lint
 
 deployment:
   deploy_docs:
     branch: master
     commands:
-      - npx storybook-to-ghpages
+      - yarn run storybook-to-ghpages
   publish:
     tag: /[^@]+@[0-9]+(\.[0-9]+)*/
     commands:
