--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ dependencies:
     - yarn run bootstrap
   cache_directories:
     - ~/.cache/yarn
+    - docs/node_modules
 
 compile:
   override:
