--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "lint-staged": "^6.0.0",
     "prettier": "^1.9.1",
     "react-test-renderer": "^16.2.0",
+    "sinon": "^4.1.6",
     "url-loader": "^0.6.2",
     "xo": "^0.18.2"
   }
