Fix for scrollbar in tables. Table and TableHead components + docs added. (#119)
* Table and TableHead components + docs added

* add accountForScrollbar prop

--- a/packages/evergreen-table/docs/examples/SearchTableHeaderCell.example
+++ b/packages/evergreen-table/docs/examples/SearchTableHeaderCell.example
@@ -1,4 +1,4 @@
-<TableRow>
+<TableHead>
   <SearchTableHeaderCell borderRight={null} onChange={(e) => console.log(e)} placeholder='Search by email...' />
   <SearchTableHeaderCell autoFocus borderRight={null} onChange={(e) => console.log(e)} placeholder='Autofocus...' />
-</TableRow>
+</TableHead>
