--- a/packages/evergreen-table/docs/examples/TextTableHeaderCell.example
+++ b/packages/evergreen-table/docs/examples/TextTableHeaderCell.example
@@ -1,4 +1,4 @@
-<TableRow>
+<TableHead>
   <TextTableHeaderCell isSortable>Age</TextTableHeaderCell>
   <TextTableHeaderCell borderRight={null}>Email</TextTableHeaderCell>
-</TableRow>
+</TableHead>
