--- a/packages/evergreen-table/docs/examples/Table.example
+++ b/packages/evergreen-table/docs/examples/Table.example
@@ -1,5 +1,5 @@
-<Pane border>
-  <TableRow>
+<Table>
+  <TableHead>
     <SearchTableHeaderCell />
     <TextTableHeaderCell isSortable sortOrder="descending">
       Last Activity
@@ -7,7 +7,7 @@
     <TextTableHeaderCell textAlign="right" borderRight={null}>
       ltv
     </TextTableHeaderCell>
-  </TableRow>
+  </TableHead>
   <TableBody height={240}>
     {profiles.map(profile => (
       <TableRow key={profile.id} isSelectable>
@@ -19,4 +19,4 @@
       </TableRow>
     ))}
   </TableBody>
-</Pane>
+</Table>
