--- a/packages/evergreen-table/docs/examples/TableHeaderCell.example
+++ b/packages/evergreen-table/docs/examples/TableHeaderCell.example
@@ -1,3 +1,3 @@
-<TableRow>
+<TableHead>
  <TableHeaderCell borderRight={null}>You almost never want to use this component directly.</TableHeaderCell>
-</TableRow>
+</TableHead>
